[gd_scene load_steps=33 format=3 uid="uid://dt1f0pt61rwgs"]

[ext_resource type="SpriteFrames" uid="uid://dvm2c2dceyk1b" path="res://assets/sprites/spriteframes/playerBaseSpriteframes.tres" id="1_5sjbw"]
[ext_resource type="Script" path="res://scripts/player/PlayerManager.gd" id="1_x08n2"]
[ext_resource type="Script" path="res://scripts/animationSystem/AnimationController.gd" id="2_ypxw5"]
[ext_resource type="Script" path="res://scripts/movementSystem/MovementControls.gd" id="3_n8exw"]
[ext_resource type="Script" path="res://scripts/movementSystem/states/IdleState.gd" id="4_h6tu5"]
[ext_resource type="Script" path="res://scripts/movementSystem/states/WalkState.gd" id="5_brqt7"]
[ext_resource type="Script" path="res://scripts/movementSystem/states/RunState.gd" id="6_ymirf"]
[ext_resource type="Script" path="res://scripts/movementSystem/states/HurtState.gd" id="7_ahpep"]
[ext_resource type="Script" path="res://scripts/movementSystem/states/DeathState.gd" id="8_4045u"]
[ext_resource type="Script" path="res://scripts/movementSystem/states/MeleeState.gd" id="9_rs58a"]
[ext_resource type="Script" path="res://scripts/movementSystem/states/RangeState.gd" id="10_skru8"]
[ext_resource type="PackedScene" uid="uid://duj3ky3ewyp5g" path="res://prefabs/attacks/moving_range_attack.tscn" id="12_6qogr"]
[ext_resource type="Script" path="res://scripts/components/HealthComponent.gd" id="12_575i4"]
[ext_resource type="Script" path="res://scripts/drops/CollectDrops.gd" id="14_buevc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wm680"]

[sub_resource type="Animation" id="Animation_fkuu0"]
length = 0.001

[sub_resource type="Animation" id="Animation_v1kwb"]
length = 0.666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["dash"]
}

[sub_resource type="Animation" id="Animation_7gs3i"]
length = 0.666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}

[sub_resource type="Animation" id="Animation_v2jda"]
length = 0.266667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hurt"]
}

[sub_resource type="Animation" id="Animation_xnywj"]
length = 0.666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}

[sub_resource type="Animation" id="Animation_f4h0d"]
length = 0.466667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["melee 1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MovementControls/MeleeState/MeleeHitbox1/MeleeHitboxShape1:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_y0ftw"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["melee 2"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MovementControls/MeleeState/MeleeHitbox2/MeleeHitboxShape2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}

[sub_resource type="Animation" id="Animation_j1ddr"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["range 1"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MovementControls/RangeState")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_spawn_attack"
}]
}

[sub_resource type="Animation" id="Animation_4vqm7"]
length = 0.666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["range 2"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MovementControls/RangeState")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_spawn_attack"
}]
}

[sub_resource type="Animation" id="Animation_nhq4f"]
length = 0.466667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["range 3"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MovementControls/RangeState")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_spawn_attack"
}]
}

[sub_resource type="Animation" id="Animation_pcfo6"]
length = 0.533333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}

[sub_resource type="Animation" id="Animation_e4b5y"]
length = 0.533333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqexs"]
_data = {
"RESET": SubResource("Animation_fkuu0"),
"dash": SubResource("Animation_v1kwb"),
"death": SubResource("Animation_7gs3i"),
"hurt": SubResource("Animation_v2jda"),
"idle": SubResource("Animation_xnywj"),
"melee 1": SubResource("Animation_f4h0d"),
"melee 2": SubResource("Animation_y0ftw"),
"range 1": SubResource("Animation_j1ddr"),
"range 2": SubResource("Animation_4vqm7"),
"range 3": SubResource("Animation_nhq4f"),
"run": SubResource("Animation_pcfo6"),
"walk": SubResource("Animation_e4b5y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6pba"]
size = Vector2(31.5, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3m6e1"]
size = Vector2(22, 40.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7dymv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ejofh"]
radius = 36.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("movementControls", "animator", "healthComponent", "collectDropsComponent")]
script = ExtResource("1_x08n2")
movementControls = NodePath("MovementControls")
animator = NodePath("PlayerAnimator/DetailedAnimator")
healthComponent = NodePath("HealthComponent")
collectDropsComponent = NodePath("CollectDropComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_wm680")

[node name="PlayerAnimator" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -17)
sprite_frames = ExtResource("1_5sjbw")
animation = &"melee 2"
frame = 5

[node name="DetailedAnimator" type="AnimationPlayer" parent="PlayerAnimator"]
libraries = {
"": SubResource("AnimationLibrary_hqexs")
}
script = ExtResource("2_ypxw5")

[node name="MovementControls" type="Node2D" parent="." node_paths=PackedStringArray("startingState", "nodesToFlip", "idleState", "walkState", "runState", "hurtState", "deathState", "meleeState", "rangeState")]
script = ExtResource("3_n8exw")
startingState = NodePath("IdleState")
nodesToFlip = [NodePath("../PlayerAnimator"), NodePath(".")]
idleState = NodePath("IdleState")
walkState = NodePath("WalkState")
runState = NodePath("RunState")
hurtState = NodePath("HurtState")
deathState = NodePath("DeathState")
meleeState = NodePath("MeleeState")
rangeState = NodePath("RangeState")

[node name="IdleState" type="Node2D" parent="MovementControls"]
script = ExtResource("4_h6tu5")
animName = "idle"

[node name="WalkState" type="Node2D" parent="MovementControls"]
script = ExtResource("5_brqt7")
movementSpeed = 100
animName = "walk"

[node name="RunState" type="Node2D" parent="MovementControls"]
script = ExtResource("6_ymirf")
movementSpeed = 200
animName = "run"

[node name="HurtState" type="Node2D" parent="MovementControls"]
script = ExtResource("7_ahpep")

[node name="DeathState" type="Node2D" parent="MovementControls"]
script = ExtResource("8_4045u")

[node name="MeleeState" type="Node2D" parent="MovementControls" node_paths=PackedStringArray("comboTimer", "cooldownTimer")]
script = ExtResource("9_rs58a")
comboTimer = NodePath("ComboTimer")
cooldownTimer = NodePath("CooldownTimer")
comboAnims = Array[String](["melee 1", "melee 2"])

[node name="ComboTimer" type="Timer" parent="MovementControls/MeleeState"]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="MovementControls/MeleeState"]
one_shot = true

[node name="MeleeHitbox1" type="Area2D" parent="MovementControls/MeleeState"]
collision_layer = 4
collision_mask = 0

[node name="MeleeHitboxShape1" type="CollisionShape2D" parent="MovementControls/MeleeState/MeleeHitbox1"]
position = Vector2(25.25, -9)
shape = SubResource("RectangleShape2D_j6pba")
disabled = true

[node name="MeleeHitbox2" type="Area2D" parent="MovementControls/MeleeState"]
collision_layer = 4
collision_mask = 0

[node name="MeleeHitboxShape2" type="CollisionShape2D" parent="MovementControls/MeleeState/MeleeHitbox2"]
position = Vector2(20, -20.75)
shape = SubResource("RectangleShape2D_3m6e1")
disabled = true

[node name="RangeState" type="Node2D" parent="MovementControls" node_paths=PackedStringArray("comboTimer", "cooldownTimer", "bulletSpawnPos")]
script = ExtResource("10_skru8")
comboTimer = NodePath("ComboTimer")
cooldownTimer = NodePath("CooldownTimer")
comboAnims = Array[String](["range 1", "range 2", "range 3"])
bulletPrefab = ExtResource("12_6qogr")
bulletSpawnPos = NodePath("AttackSpawnPos")

[node name="ComboTimer" type="Timer" parent="MovementControls/RangeState"]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="MovementControls/RangeState"]
one_shot = true

[node name="AttackSpawnPos" type="Marker2D" parent="MovementControls/RangeState"]
position = Vector2(19, 0)

[node name="HealthComponent" type="Area2D" parent="."]
position = Vector2(0, -15)
collision_layer = 0
collision_mask = 0
script = ExtResource("12_575i4")
health = 3

[node name="HealthHitbox" type="CollisionShape2D" parent="HealthComponent"]
shape = SubResource("CapsuleShape2D_7dymv")

[node name="CollectDropComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource("14_buevc")

[node name="CollectDropShape" type="CollisionShape2D" parent="CollectDropComponent"]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_ejofh")
